# consoleduels

./: .clangd  .gitignore  CMakeLists.txt  ConsoleFightingGame.slnx  ConsoleFightingGame.vcxproj  ConsoleFightingGame.vcxproj.filters  README.md
data/: weapons.json
include/: battle.hpp  character.hpp  console_utils.hpp  enemy.hpp  game.hpp  player.hpp
include/characters/: enemy.hpp  player.hpp
include/characters/base/: character.hpp
include/components/: healthcomponent.hpp  weaponcomponent.hpp  weapondata.hpp  weapondatabase.hpp
include/presentation/: consolecombatlog.hpp
include/utility/: event.hpp  gameevents.hpp
src/: character.cpp  console_utils.cpp  enemy.cpp  game.cpp  main.cpp  player.cpp
src/characters/: enemy.cpp  player.cpp
src/characters/base/: character.cpp
src/components/: healthcomponent.cpp  weaponcomponent.cpp  weapondatabase.cpp
src/presentation/: consolecombatlog.cpp
src/utility/: console_utils.cpp
